[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src/"]
include = ["falcon_utils.auth"]

[project]
name = "falcon-utils-auth"
version = "0.0.2"
authors = [
  { name="Nirbhay Gupta", email="nirbhay.gupta@junio.in" },
]
description = "Falcon Contribution project"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[tool.pytest.ini_options]
addopts = "-rSA"
testpaths = [
  "tests"
]
dependencies=[
  "casbin >= 1.36.3",
  "cryptography ~= 43.0",
  "pyjwt ~= 2.9"
]