[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src/"]
include = ["falcon_utils.auth", "falcon_utils.auth.asgi", "falcon_utils.auth.wsgi", "falcon_utils.auth.shared", "falcon_utils.auth.casbin"]

[project]
name = "falcon-utils-auth"
version = "0.0.12"
authors = [
  { name="Nirbhay Gupta", email="nirbhay.gupta@junio.in" },
]
description = "Falcon Contribution project"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies=[
  "casbin >= 1.36.3",
  "cryptography ~= 43.0",
  "pyjwt ~= 2.9"
]


[tool.pytest.ini_options]
addopts = "-rSA"
testpaths = [
  "tests"
]