[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src/"]
include = ["falcon_utils.routing", "falcon_utils.routing.asgi", "falcon_utils.routing.shared", "falcon_utils.routing.wsgi"]

[project]
name = "falcon-utils-routing"
version = "0.0.2"
authors = [
  { name="Nirbhay Gupta", email="nirbhay.gupta@junio.in" },
]
description = "Falcon Contribution project"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
